--- a/shizhong.html
+++ b/shizhong.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>智能社—http://www.zhinengshe.com</title>
+    <title>css3时钟</title>
     <style>
         html,body{
             overflow: hidden;
