--- a/面试练习.html
+++ b/面试练习.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>面试练习</title>
+    <style>
+        *{ padding:0; margin:0;}
+        .img1{ width:500px; height: 500px; border:1px solid red; text-align: center; line-height: 500px; float:left; font-size:0;}
+        img{ vertical-align:middle;}
+        .box1{ background: blue; width:20px; height: 178px; border:1px solid #000; float:left; margin-left:-200px; border-bottom:none;}
+    </style>
 </head>
 <body>
     <div id="dom1">
@@ -17,6 +23,10 @@
         <li></li>
         <li></li>
     </ul>
+    <div class="img1">
+        <img src="https://avatars3.githubusercontent.com/u/18275571?v=4&s=88" alt="">
+    </div>
+    <div class="box1"></div>
     <script>
         var str = 'dasd';
         Object.prototype.clone = function() {
